<resources>
    <string name="app_name">FoodController</string>
    <string name="menu">Menu</string>
    <string name="categories">Kategorie</string>
    <string name="category">Kategoria</string>
    <string name="meal">Posiłek</string>
    <string name="products">Produkty</string>
    <string name="dot">.</string>
    <string name="cancel">Anuluj</string>
    <string name="ok">Ok</string>
    <string name="kg">kg</string>
    <string name="g">g</string>
    <string name="calories">Kalorie</string>
    <string name="protein">Białko</string>
    <string name="protein_g">Białko(g)</string>
    <string name="weight">Waga</string>
    <string name="add">Dodaj</string>
    <string name="colon">:</string>
    <string name="meal_number">Posiłek %s</string>
    <string name="meal_details_template">O %02d:%02d zjedzono:</string>
    <string name="time_template">%02d:%02d</string>
    <string name="day">Dzień</string>
    <string name="name">Nazwa</string>
    <string name="save">Zapisz</string>
    <string name="add_definition">Dodaj definicję</string>
    <string name="edit_definition">Edytuj definicję</string>
    <string name="new_product">Nowy produkt</string>
    <string name="move">Przenieś</string>
    <string name="details">Szczegóły</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="definition_moved">Definicja została przeniesiona</string>
    <string name="no_change">Brak zmian</string>
    <string name="save_success">Zapisywanie zakończyło się powodzeniem</string>
    <string name="summary">Podsumowanie</string>
    <string name="error_title">Coś poszło nie tak...</string>
    <string name="choose_food">Wybierz produkt</string>
    <string name="one">1</string>
    <string name="ten">10</string>
    <string name="hundred">100</string>
    <string name="choose">Wybierz</string>
    <string name="average_consumption">Średnie spożycie</string>
    <string name="last">Ostatnie</string>
    <string name="last_meals">Ostatnie posiłki</string>

    <!--validation-->
    <string name="name_invalid">Nazwa musi zawierać co najmniej 3 litery</string>
    <string name="weight_invalid">Waga musi być liczbą dodatnią</string>
    <string name="calories_invalid">Kalorie muszą być liczbą dodatnią</string>
    <string name="protein_invalid">Białko musi być liczbą nieujemną</string>
    <!--validation-->

    <!--hints-->
    <string name="search_hint">Szukaj...</string>
    <string name="weight_hint">70 kg</string>
    <string name="name_hint">Nazwa</string>
    <string name="kcal_hint">0 kcal</string>
    <string name="protein_hint">0 g</string>
    <string name="choose_category">Wybierz Kategorię</string>
    <!--hints-->

    <!--templates-->
    <string name="values_template">%d kcal, %d g białka</string>
    <!--templates-->

    <!--menu-->
    <string name="no_day_greeting">Witaj! Czyż nie aby czas najwyższy dzień rozpocząć?</string>
    <string name="day_greeting">Witaj! Dzień rozpoczęty</string>
    <string name="begin">Rozpocznij</string>
    <string name="back">Wróć</string>
    <string name="history">Historia</string>
    <string name="base">Baza</string>
    <string name="goals">Cele</string>
    <string name="day_ended">Dzień się zakończył. Czy chcesz rozpocząć nowy?</string>
    <!--menu-->

    <!--day-->
    <string name="delete_meal_confirmation">Czy na pewno chcesz usunąć wybrany posiłek?</string>
    <string name="delete_day_confirmation">Czy na pewno chcesz usunąć dany dzień?</string>
    <!--day-->

    <!--meal-->
    <string name="no_meals">Zjedz coś, aby móc wykorzystywać ostatnio zjedzone posiłki</string>
    <!--meal-->

    <!--history-->
    <string name="no_history">Brak wpisów w historii, zjedz coś!</string>
    <string name="years">Lata</string>
    <string name="months">Miesiące</string>
    <string name="days">Dni</string>
    <string-array name="months">
        <item>Styczeń</item>
        <item>Luty</item>
        <item>Marzec</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesień</item>
        <item>Październik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </string-array>
    <!--history-->
</resources>
