<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dpSmall">

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight" />

        <EditText
            android:id="@+id/weightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dpSmall"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"
            android:textSize="@dimen/spLarge" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calories" />

        <EditText
            android:id="@+id/caloriesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dpSmall"
            android:hint="@string/kcal_hint"
            android:inputType="number"
            android:textSize="@dimen/spLarge" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/protein" />

        <EditText
            android:id="@+id/proteinInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dpMedium"
            android:hint="@string/protein_hint"
            android:inputType="number"
            android:textSize="@dimen/spLarge" />

        <com.iprogrammerr.foodcontroller.view.CustomButton
            android:id="@+id/save"
            style="@style/MainButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</layout>