<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dpSmall">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleStyle"
                android:text="@string/name"/>

        <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dpSmall"
                android:textSize="@dimen/spLarge"
                android:hint="@string/name_hint"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleStyle"
                android:text="@string/calories"
                />

        <EditText
                android:id="@+id/caloriesInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginBottom="@dimen/dpSmall"
                android:textSize="@dimen/spLarge"
                android:hint="@string/kcal_hint"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleStyle"
                android:text="@string/protein"/>

        <EditText
                android:id="@+id/proteinInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="@dimen/spLarge"
                android:hint="@string/protein_hint"/>

        <TextView
                android:id="@+id/categoriesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleStyle"
                android:layout_marginTop="@dimen/dpSmall"
                android:text="@string/category"/>

        <Spinner
                android:id="@+id/categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dpSmall"
                android:background="@drawable/spinner_background"
                android:popupBackground="@drawable/spinner_background"/>

        <com.iprogrammerr.foodcontroller.view.CustomButton
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dpMedium"
                style="@style/MainButtonStyle"
                android:text="@string/save"
                />
    </LinearLayout>
</layout>