<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dpSmall">

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dpSmall"
            android:text="@string/calories" />

        <TextView
            android:id="@+id/calories"
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dpMedium"
            android:textColor="@color/darkBlue"
            tools:text="3000" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dpSmall"
            android:text="@string/protein" />

        <TextView
            android:id="@+id/protein"
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dpMedium"
            android:textColor="@color/darkBlue"
            tools:text="120 g" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/protein_hint"
            android:inputType="number"
            android:textSize="@dimen/spLarge" />

        <com.iprogrammerr.foodcontroller.view.CustomButton
            android:id="@+id/save"
            style="@style/MainButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dpMedium"
            android:text="@string/save" />
    </LinearLayout>
</layout>