<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dpSmall">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dpSmall"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/TitleStyle"
                    android:text="@string/calories"
                    />

            <ProgressBar
                    android:id="@+id/caloriesProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:progressDrawable="@drawable/calories_progress"
                    android:indeterminate="false"
                    tools:max="100"
                    tools:progress="78"/>

            <TextView
                    android:id="@+id/caloriesValue"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/dpLittle"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/DescriptionStyle"
                    android:textColor="@color/caloriesForeground"
                    tools:text="1200/3000"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dpMedium"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/TitleStyle"
                    android:text="@string/protein"
                    />

            <ProgressBar
                    android:id="@+id/proteinProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:progressDrawable="@drawable/protein_progress"
                    android:indeterminate="false"
                    tools:max="120"
                    tools:progress="20"/>

            <TextView
                    android:id="@+id/proteinValue"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/dpLittle"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/DescriptionStyle"
                    android:textColor="@color/caloriesForeground"
                    tools:text="20/120"
                    />
        </LinearLayout>

        <com.iprogrammerr.foodcontroller.view.CustomButton
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MainButtonStyle"
                android:layout_marginBottom="@dimen/dpSmall"
                android:text="@string/weight"/>

        <com.iprogrammerr.foodcontroller.view.CustomButton
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MainButtonStyle"
                android:layout_marginBottom="@dimen/dpMedium"
                android:text="@string/add"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/meals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>